--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
     mc:Ignorable="d" Loaded="Page_Loaded">
     <Grid Background="#FF004174">
         <Grid.RowDefinitions>
@@ -16,10 +16,8 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="LogoButton" BorderBrush="#FF004174" Click="LogoButton_Click">
-        <Image HorizontalAlignment="Left" Height="152" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" Width="512" Source="Assets/StoreLogo.png" />
-        </Button>
-        <Button x:Name="AddTimeButton" Content="Add Time" Grid.Column="1" Margin="0,0,10,0" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="245" FontSize="48" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal">
+        <Image HorizontalAlignment="Left" Height="152" Margin="15,5,0,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Top" Width="512" Source="Assets/StoreLogo.png" />
+        <!--<Button x:Name="AddTimeButton" Content="Add Time" Grid.Column="1" Margin="0,0,10,0" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="245" FontSize="48" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal">
             <Button.Flyout>
                 <MenuFlyout Placement="Bottom">
                     <MenuFlyoutItem x:Name="AddTimeMenu" Text="Add Time" FontSize="30" Click="AddTimeClick" />
@@ -28,10 +26,10 @@
                 </MenuFlyout>
             </Button.Flyout>
         </Button>
-        <Button x:Name="AddTicketButton" Content="Add Ticket" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="270" FontSize="48" Click="AddTicketClick" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal"/>
-        <Frame x:Name="MainFrame" Content="Frame" HorizontalAlignment="Stretch" Grid.Row="1" Grid.ColumnSpan="3" VerticalAlignment="Top" />
-        <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="right" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <Grid Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="right" Margin="0,101,0,0">
+        <Button x:Name="AddTicketButton" Content="Add Ticket" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" Height="88" VerticalAlignment="Top" Width="270" FontSize="48" Click="AddTicketClick" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal"/>-->
+        <Frame x:Name="MainFrame" Content="Frame" HorizontalAlignment="Stretch" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" VerticalAlignment="Top" />
+        <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="right" Margin="0,0,50,0" VerticalAlignment="Top" Foreground="White"/>
+        <Grid Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="right" Margin="0,0,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
